--- a/app/src/main/res/layout/activity_login_.xml
+++ b/app/src/main/res/layout/activity_login_.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/proback4"
     android:gravity="center"
+
     tools:context=".Login_Activity">
     <ScrollView
         android:layout_width="match_parent"
