--- a/app/src/main/res/layout/activity_salary_manage.xml
+++ b/app/src/main/res/layout/activity_salary_manage.xml
@@ -125,7 +125,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@drawable/button"
                 android:elevation="5dp"
-                android:text="Check Salary Details"
+                android:text="Return to home"
                 android:textAllCaps="false"
                 android:textColor="@color/lightWhite"
                 android:textSize="20dp" />
