--- a/app/src/main/res/layout/payment.xml
+++ b/app/src/main/res/layout/payment.xml
@@ -4,21 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/proback5"
     tools:context=".Payment">
+tye
 
     <ImageView
         android:id="@+id/imageView9"
-        android:layout_width="403dp"
-        android:layout_height="512dp"
+        android:layout_width="295dp"
+        android:layout_height="262dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.96"
         app:srcCompat="@drawable/applogo" />
-
 
     <ImageView
         android:id="@+id/imageView5"
@@ -26,10 +26,10 @@
         android:layout_height="114dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.126"
+        app:layout_constraintHorizontal_bias="0.119"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.069"
+        app:layout_constraintVertical_bias="0.123"
         app:srcCompat="@drawable/icons8_paypal_512" />
 
     <ImageView
@@ -46,32 +46,31 @@
 
     <Button
         android:id="@+id/btnCardPay"
-        android:layout_width="109dp"
-        android:layout_height="32dp"
+        android:layout_width="200dp"
+        android:layout_height="73dp"
         android:background="@drawable/button"
         android:text="Paypal"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.645"
+        app:layout_constraintHorizontal_bias="0.844"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.141" />
+        app:layout_constraintVertical_bias="0.146" />
 
     <Button
         android:id="@+id/btnCard"
-        android:layout_width="109dp"
-        android:layout_height="32dp"
+        android:layout_width="200dp"
+        android:layout_height="73dp"
         android:background="@drawable/button"
         android:text="Card Payment"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.645"
+        app:layout_constraintHorizontal_bias="0.846"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.392" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
